Updates to Activity, prepare Robolectric tests